# DRS

./: .gitignore  MAIN_README.md  PHASE_3_RESOURCE_COORDINATION.md  PHASE_3_SUMMARY.md  PHASE_4_AI_DECISION_ASSISTANT.md  PHASE_4_ARCHITECTURE_VISUAL.md  PHASE_4_QUICKSTART.md  PHASE_4_SUMMARY.md  PHASE_4_TESTING_GUIDE.md  PHASE_5_CITIZEN_SOS.md  PHASE_5_IMPLEMENTATION_COMPLETE.md  PHASE_5_QUICKSTART.md  PHASE_5_TESTING_GUIDE.md  README.md  restart-backend.sh  run-backend.py  run-frontend.py  setup-phase3.bat  setup-phase3.sh  start-all.py  start-backend.sh  test-registration.py
.devcontainer/: devcontainer.json
backend/: .env.example  pyproject.toml  requirements.txt  resilience_hub.db
backend/app/: auth.py  config.py  database.py  main.py  models.py  schemas.py  schemas_ai.py
backend/app/routers/: ai.py  auth.py  disaster.py  dispatch.py  gov_feeds.py  infrastructure.py  logging.py  operations.py  public.py  resources.py  simulation.py  sms_alerts.py  sos.py
backend/app/services/: __init__.py  ai.py  disaster_apis.py  disaster_validator.py  dispatch.py  gov_feeds.py  logging.py  simulation.py  sms_alerts.py  sos.py
backend/app/websockets/: manager.py
backend/tests/: test_google_auth.py  test_sos_logic.py
resilience-hub/: .env.example  .gitignore  README.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
resilience-hub/src/: App.tsx  index.css
resilience-hub/src/components/: AIDecisionAssistant.tsx  AlertCenter.tsx  ChatPanel.tsx  CrowdAssistancePanel.tsx  (+4 more)
tests/: test_ai_logic.py  test_dispatch_logic.py
(+38 files in other folders)
